# RAG_engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: basic_ingestion.py  chunking_demo.py  embedding_demo.py  faiss_demo.py  pdf_ingestion.py  pdf_retrieval_demo.py  rag_engine_demo.py  semantic_retrieval_demo.py
src/rag_engine/: engine.py
src/rag_engine.egg-info/: PKG-INFO  SOURCES.txt
src/rag_engine/chunking/: base.py  fixed.py  overlap.py
src/rag_engine/config/: settings.py
src/rag_engine/embeddings/: base.py  local.py  utils.py
src/rag_engine/ingestion/: normalizer.py
src/rag_engine/ingestion/loaders/: json_loader.py  log_loader.py  pdf_loader.py  text_loader.py
src/rag_engine/retrieval/: semantic.py
src/rag_engine/schema/: document.py  retrieval.py
src/rag_engine/vector_store/: base.py  faiss_store.py  in_memory.py
